dovecot/dovecot-pigeonhole/tests/extensions/include/errors/variables-inactive.sieve
require "include";
require "fileinto";

global "friep";
global "frop";

fileinto "Frop";
